test/units/TypingSpec/valid/prog/case-substitution-1.algst
data Id a = Id a

getId : forall a. Id a -> a
getId [_] id =
  case id of {
    Id a -> a
  }
