test/units/TypingSpec/invalid/types/case-session-wildcard.algst
\(c : ?Bool.end) -> case c of {
  True c -> (),
  _ -> (),
}
